# DesignAnalysisAlgo

./: README.md
1.Inversions/: CMakeLists.txt  inversions.cpp  inversions.h  main.cpp  test.txt
1.Inversions/doc/: README.md  README.md~  specification.txt
1.Inversions/include/: MergeSort.hpp  MergeSort.hpp~  mergesort.hpp~  mergesort.h~
1.Inversions/source/: CMakeLists.txt  Makefile  main.cpp  main.cpp~
1.Inversions/test/: CMakeLists.txt  tests.cpp  tests.cpp~
2.QuickSort/: CMakeLists.txt  pseudocode.txt
2.QuickSort/doc/: README.md  pseudocode.txt  specification.txt
2.QuickSort/include/: QuickSort.hpp  QuickSort.hpp~
2.QuickSort/source/: CMakeLists.txt  Makefile  main.cpp  main.cpp~
2.QuickSort/test/: CMakeLists.txt  Makefile  tests.cpp
3.MinimumCut/: CMakeLists.txt
4.StronglyConnectedComponents/: CMakeLists.txt
5.Dijkstra/: CMakeLists.txt
6.1.TwoSum/: CMakeLists.txt
6.2.MedianMaintanence/: CMakeLists.txt
6.2.MedianMaintenance/: CMakeLists.txt
7.1.MinWeightedSumOfCompletionTimes/: CMakeLists.txt
7.2.MinSpanningTree/: CMakeLists.txt
8.1.ClusteringSmall/: CMakeLists.txt
8.1.ClusteringSmall/test/: CMakeLists.txt  ClusteringTest.cpp  UnionFindTest.cpp
8.2.ClusteringBig/: CMakeLists.txt
8.2.ClusteringBig/test/: BitFunctionsTest.cpp  CMakeLists.txt  ClusteringTest.cpp  UnionFindTest.cpp
9.1.HuffmanCoding/: CMakeLists.txt
9.2.MaxWeightIndependentSet/: CMakeLists.txt
A.2.KnapsackProblemBig/: CMakeLists.txt
B.AllPairsShortestPath/: CMakeLists.txt
B.AllPairsShortestPath/test/: BellManFordTest.cpp  CMakeLists.txt  DijkstraTest.cpp  JohnsonsAlgoTest.cpp
C.TravelingSalesmanProblem/: CMakeLists.txt
C.TravelingSalesmanProblem/test/: BitwiseTest.cpp  CMakeLists.txt  MapTest.cpp  TSPDPTest.cpp
D.TravelingSalesmanProblemHeuristic/: CMakeLists.txt
E.2SATProblem/: CMakeLists.txt
(+168 files in other folders)
